# dealii-demo

./: CMakeLists.txt
alice/: CMakeLists.txt  alice.cc
charly/: CMakeLists.txt  charly.cc
src/: CMakeLists.txt  bar.cc
tests/: CMakeLists.txt  bunny.cc  bunny.output  dummy.output  test_foo.cc
