SET(BOB_VERSION 0.0.1)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

FIND_PACKAGE(deal.II 8.3 REQUIRED HINTS ${DEAL_II_DIR} $ENV{DEAL_II_DIR})

DEAL_II_INITIALIZE_CACHED_VARIABLES()
DEAL_II_QUERY_GIT_INFORMATION()

PROJECT(bob CXX)

ADD_SUBDIRECTORY(alice)
ADD_SUBDIRECTORY(charly)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
