ADD_EXECUTABLE(charly charly.cc)
DEAL_II_SETUP_TARGET(charly)
TARGET_LINK_LIBRARIES(charly alice)

SET_PROPERTY(TARGET charly APPEND PROPERTY COMPILE_DEFINITIONS
  BOB_VERSION="${BOB_VERSION}"
  BOB_GIT_REVISION="${GIT_REVISION}"
  BOB_GIT_SHORTREV="${GIT_SHORTREV}"
  DEAL_II_VERSION="${DEAL_II_VERSION}"
  DEAL_II_GIT_BRANCH="${DEAL_II_GIT_BRANCH}"
  DEAL_II_GIT_REVISION="${DEAL_II_GIT_REVISION}"
  DEAL_II_GIT_SHORTREV="${DEAL_II_GIT_SHORTREV}"
  )

ADD_CUSTOM_TARGET(run COMMAND charly)
