ADD_LIBRARY(foo SHARED foo.cc)
DEAL_II_SETUP_TARGET(foo)

ADD_EXECUTABLE(bar bar.cc)
DEAL_II_SETUP_TARGET(bar)
TARGET_LINK_LIBRARIES(bar foo)

SET_PROPERTY(TARGET bar APPEND PROPERTY COMPILE_DEFINITIONS
  DEMO_VERSION="${DEMO_VERSION}"
  DEMO_GIT_BRANCH="${GIT_BRANCH}"
  DEMO_GIT_REVISION="${GIT_REVISION}"
  DEMO_GIT_SHORTREV="${GIT_SHORTREV}"
  DEAL_II_VERSION="${DEAL_II_VERSION}"
  DEAL_II_GIT_BRANCH="${DEAL_II_GIT_BRANCH}"
  DEAL_II_GIT_REVISION="${DEAL_II_GIT_REVISION}"
  DEAL_II_GIT_SHORTREV="${DEAL_II_GIT_SHORTREV}"
  )

ADD_CUSTOM_TARGET(run COMMAND bar)
